--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-# a comment that will be ignored.
-USERNAME=UStuxaJU5RVKd7JC4GWWZN1f
-PASSWORD=93390e04-3643-4f21-b277-c1bc0852de60
-VAULTID=tntnopmrps6
+
+USERNAME=
+PASSWORD=
+VAULTID=
