--- a/requirements.txt
+++ b/requirements.txt
@@ -3,9 +3,11 @@ chardet==3.0.4
 click==7.1.1
 Flask==1.1.1
 idna==2.9
+install==1.3.4
 itsdangerous==1.1.0
 Jinja2==2.11.1
 MarkupSafe==1.1.1
+python-dotenv==0.15.0
 requests==2.23.0
 urllib3==1.25.8
 Werkzeug==1.0.0
