--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ idna==2.9
 itsdangerous==1.1.0
 Jinja2==2.11.3
 MarkupSafe==1.1.1
-requests==2.23.0
-urllib3==1.26.5
+requests
+urllib3
 Werkzeug==1.0.0
+python-dotenv
